--- a/robo/static/base.css
+++ b/robo/static/base.css
@@ -101,7 +101,7 @@ html {
 
 /* -----------------------------------------------  landing Page */
 .landingpage{
-    min-height: 90%;
+    height: 50vh;
 
       /* fallback for old browsers */
     /* background: -webkit-linear-gradient(to right, #414345, #232526);  /* Chrome 10-25, Safari 5.1-6 */
