--- a/robo/templates/feedbacks.html
+++ b/robo/templates/feedbacks.html
@@ -22,7 +22,7 @@
           <th >Sl.no</th>
           <th >Date</th>
           <th >Feedback</th>
-          <th >Name</th>
+          <th >source</th>
         </tr>
       </thead>
       <tbody>
