--- a/robo/templates/base.html
+++ b/robo/templates/base.html
@@ -13,6 +13,11 @@
     {% block style %}
     {% endblock %}
 
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script>
+        ScrollReveal({ reset: true });
+    </script>
+
 
 </head>
 <body>
@@ -20,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg py-3  ">
             <div class="container">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand .headline" href="#">
                     <img class="logo" src="{% static 'IMAGES/robot.png' %}" alt="" width="60" height="60">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,19 +33,36 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav ms-auto">
-                  <a class="nav-link px-md-3 mx-md-2 text-center active" href="{% url 'index_url' %}">Home</a>
-                  <a class="nav-link px-md-3 mx-md-2 text-center" href="#">About Us</a>
-                  <a class="nav-link px-md-3 mx-md-2 text-center" href="{% url 'feedback_list_url' %}">Feedbacks</a>
-                  <a class="nav-link px-md-3 mx-md-2 text-center" href="{% url 'interactions_list_url' %}">Interactions</a>
-                  <a class="nav-link px-md-3 mx-md-2 text-center" href="#">Documentation</a>
-                  <a class="nav-link px-md-3 mx-md-2 text-center" href="#">Login</a>
-                 
+                <div class="navbar-nav ms-auto ">
+                  <a class="nav-link px-md-3 mx-md-2 text-center active headline" href="{% url 'index_url' %}">Home</a>
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="{% url 'chatbot_url' %}">Chat bot</a>
+                  
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="#">About Us</a>
+                  
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="#">Documentation</a>
+
+                  {% if user.is_authenticated %}
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="{% url 'feedback_list_url' %}">Feedbacks</a>
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="{% url 'interactions_list_url' %}">Interactions</a>
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="{% url 'logout_url' %}">Logout</a>
+                  {% else %}
+                  <a class="nav-link px-md-3 mx-md-2 text-center headline" href="{% url 'login_url' %}">Login</a>
+                  {% endif %}
                 </div>
               </div>
             </div>
         </nav>
 
+        {% if messages %}
+        <div class="alert alert-success m-5 p-1 px-5">
+        <strong>Messages</strong>
+        <ul>
+            {% for message in messages %}
+            <li>{{message}}</li>
+            {% endfor %}
+        </ul>
+        </div>
+        {% endif %}
         {% block content %}
         {% endblock %}
          
@@ -59,8 +81,13 @@
 
     {% block script %}
     {% endblock %}
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+    
+    <script>
+        ScrollReveal().reveal('.headline', { delay: 100 });
         
+    </script>
 </body>
 </html>
